Attempt to fix truncated stop menu

--- a/app/static/assets/css/app.css
+++ b/app/static/assets/css/app.css
@@ -4,10 +4,12 @@
 }
 
 html {
+    height: 100%;
     overflow-x: hidden;
 }
 
 body {
+    min-height: 100%;
     padding-top: 48px;
     overflow-x: hidden;
 }
